<resources>
    //General Use Strings
    <string name="app_name">unitConverter</string>
    <string name="input_here">input here</string>
    <string name="button_that_converts">This button to go.</string>

    //Celsius to Fahrenheit
    <string name="celsius_to_fahren_title">Celsius to Fahrenheit Converter</string>

    //Main activity screen stuff
    <string name="textview_main">Unit Converter.</string>
    <string name="button_main_move_to_cTf">Convert celsius to fahrenheit</string>
    <string name="button_main_move_to_fTc">Convert fahrenheit to Celsius</string>

    //Fahren to Celsius
    <string name="fahren_to_celsius_title">Fahrenheit to Celsius Converter</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="settings">Settings</string>
    <string name="text_size">Text Size:</string>
    <string name="smallest">Smallest</string>
    <string name="small">small</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>
    <string name="largest">Largest</string>
    <string name="text_sample">Text Sample:</string>
    <string name="quick_brown_fox">The quick brown fox jumps over the lazy dog.</string>
    <string name="sphinx">Sphinx of black quartz, judge my vow.</string>
    <string name="kilo_to_mile">Kilometres to Miles</string>
    <string name="kilometres_to_miles_converter">Kilometres to Miles Converter</string>
</resources>
