<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".CelsiusToFahren">

    <TextView
        android:id="@+id/textView_fahren_to_celsius"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:textSize="48sp"
        android:text="@string/fahren_to_celsius_title" />

    <EditText
        android:id="@+id/editText_fahren_to_celsius"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/input_here"
        android:importantForAutofill="no"
        tools:ignore="UnusedAttribute" />

    <Button
        android:id="@+id/button_fahren_to_celsius"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/button_that_converts"
        android:onClick="buttonClicked"/>

</LinearLayout>